apps/frontend/src/app/shell/nav/nav.component.css
.sidenav-container {
  height: 100%;
}

/* .sidenav {
  width: 350px;
} */

.sidenav .mat-toolbar {
  background: inherit;
}

.mat-toolbar.mat-primary {
  position: sticky;
  top: 0;
  z-index: 1;
}

.active {
  background-color: navy;
}

.app-title {
  padding-left: 15px;
  margin-right: 20px;
}

.flex-spacer {
  flex: 1 1 auto;
}

.sidenav-container {
  display: flex;
  flex-direction: row;
  height: 100vh;
}

mat-sidenav {
  flex-shrink: 0;
}

mat-sidenav-content {
  flex-grow: 1;
}

